themes/startwords/assets/scss/article/_notes.scss
body.article .footnotes {
    min-height: 50vh;
    margin-top: rem(120px);
    margin-bottom: rem(120px);
    @include constrain-text;

    > hr { display: none; }


    $close-icon-size: 26px;
    /* width from the short side of the note to the outside of the icon */
    /* arrow point is 22.5% from right; subtract ~1/2 icon size */
    $close-icon-margin: calc(22.5% - 13px);

    ol {
        padding: 0;
        counter-reset: footnoteCounter;
        list-style: none;
    }

    a[role=doc-backlink] {
        text-decoration: none;
        color: $red;
    }

    /* For transitions, only the transitioned property must change.
       So the default styles for footnote li is as contextual note. */
    li {
        counter-increment: footnoteCounter;
        margin: 0 2.5rem;
        overscroll-behavior: none;
        -webkit-overflow-scrolling: touch;

        position: fixed;
        width: 100vw;  /* full-width on mobile */
        margin: 0;
        left: 0;
        bottom: -120vh;  /* display offscreen on mobile by default */
        transition: bottom 0.5s ease;
        padding: rem(120px) rem(15px) 2.25rem  rem(15px);
        max-height: rem(379px);

        clip-path: polygon(77.5% 0, 100% 42px, 100% 100%, 0 100%, 0 107.5px);
        background: $purple;

        font-family: $font-serif;
        font-size: rem(16px);
        line-height: rem(24px);
        color: $off-white;

        /* semi-cheat: set the close icon as a background image in the correct
        location for browsers that don't display it (even though it is clickable)
        on long notes due to overflow:hidden on the paragraph */
        background-image: url(/img/icons/close-button-contextual-note.svg);
        background-repeat: no-repeat;
        background-position: 79.5% rem(5px);
        background-size: $close-icon-size;

        /* full width up to 414px; limit width on larger screens  */
        @media (min-width: $breakpoint-fullwidth-notes + 1) {
            width: rem(320px);
            right: rem(-350px); /* off-screen to avoid flicker when leaving endnotes */
            bottom: 12rem;
            left: auto;
            opacity: 0;
            pointer-events: none;
            transition: opacity 0.5s ease;
        }

        /* active footnote */
        &:target {
            bottom: 0;
            z-index: 1;

            /* full width up to 414px; limit width on larger screens  */
            @media (min-width: $breakpoint-fullwidth-notes + 1) {
                width: rem(320px);
                right: rem(50px);
                opacity: 1;
                pointer-events: auto;
            }
        }

        &::before {
            /* replace list marker with counter (::marker not yet widely supported) */
            content: counter(footnoteCounter);
            color: $red;
            font-family: $font-serif;

            /* position footnote number for contextual note by default */
            position: absolute;
            font-weight: bold;
            /* align with arrow icon */
            width: $close-icon-size;
            text-align: center;
            right: $close-icon-margin;
            top: rem(50px);
            font-size: rem(35px);
        }

        p {
            margin: 0;
            max-height: rem(203px);
            overflow-y: scroll;
            overscroll-behavior-y: contain;
            max-width: calc(100vw - 1.5rem);
            background-image: none;   /* iOS Safari inherits otherwise */
            outline: none;

            /* full width up to 414px; limit width on larger screens  */
            @media (min-width: $breakpoint-fullwidth-notes + 1) {
                width: 100%;
            }

            img {
                position: relative;
                max-width: calc(100vw - 1.5rem);
                min-width: rem(250px);
                padding-top: rem(20px);
                display: block;
                margin: auto;

                @media (min-width: $breakpoint-fullwidth-notes + 1) {
                    width: 100%;
                }
            }
        }

        a {
            @include highlight-focus;
            color: $light-purple;
            &:focus { outline-color: $off-white; }
        }

        a[role=doc-backlink] {
            position: absolute;
            top: rem(5px);
            right: $close-icon-margin;
            width: $close-icon-size;
            height: $close-icon-size;
            color: transparent;  /* make text transparent */
            display: block;
            text-decoration: none;
            /* set icon as background image */
            background-image: url(/img/icons/close-button-contextual-note.svg);
            background-size: contain;
            z-index: 5;  /* ensure clickable on safari */

            /* override focus styles and use border for round outline */
            &:focus {
                outline: none;
            }
            &:focus::before {
                content: " ";
                display: block;
                width: calc(100% + 4px);
                height: calc(100% + 4px);
                position: absolute;
                left: -3px;
                top: -3px;
                border-radius: 15px;
                border: 1px dashed $off-white;
            }
        }

        /* mirror image version for notes on the left side of the page */
        &.flip {
            clip-path: polygon(22.5% 0, 100% 107.5px, 100% 100%, 0 100%, 0 42px);
            background-position: 20.5% rem(5px);

            &::before {
                left: $close-icon-margin;
            }

            a[role=doc-backlink] {
                left: $close-icon-margin;
            }
        }
    }

    /* styles for footnotes as they appear in endnotes and PDF */
    @mixin endnote-styles {

        ol {
            margin: 0;

            li {
                position: relative;
                color: $dark-grey;
                width: auto;
                height: auto;
                bottom: auto;
                right: auto;
                opacity: 1;
                padding: 0;
                clip-path: none;
                pointer-events: auto;
                padding-bottom: rem(15px);
                overscroll-behavior: auto;
                -webkit-overflow-scrolling: auto;
                background-image: none;
                background: none;
                max-height: none;

                &::before {
                    /* position counter for endnote display (web only) */
                    float: left;
                    display: inline;
                    padding-right: 2px;
                    text-indent: 0;
                    vertical-align: top;
                    font-size: 70%;
                    font-weight: 600;
                    font-family: $font-serif;
                    width: auto;
                    right: auto;
                    left: auto;
                    top: auto;
                }

                a[role=doc-backlink] {
                    position: relative;
                    width: auto;
                    color: $red;
                    background: none;
                    display: inline;
                    top: auto;
                    right: auto;
                    left: auto;

                    @include highlight-focus;
                }

                p {
                    padding-top: 0;
                    max-height: none;
                    width: auto;
                    text-indent: 1rem;

                    img {
                        max-width: rem(300px);
                        min-width: rem(250px);
                    }
                }

                a {
                    color: $dark-purple;
                }
            }
        }
    }

    &.endnotes {
        @include endnote-styles;
        ol {

            li {
                background: $off-white;
            }
        }

    }

    @media print {
        @include endnote-styles;
    }


}

a.footnote-ref {
    color: $red;
    text-decoration: none;
    font-weight: 600;
    font-family: $font-serif;
    position: relative;
    /* extend left to make a larger touch target */
    padding: 1rem;
    margin: -1rem;
    padding-left: rem(100px);
    margin-left: rem(-100px);
    padding-bottom: 0.7rem;

    &::after {
        content: " ";
        display: inline-block;
        position: absolute;
        right: 1rem;
        bottom: 0;
        padding-left: 0;
        margin-left: 0;
        width: rem(100px);
        height: rem(5px);
        background: linear-gradient(to right, $off-white, $transparent-red);
    }
}

sup {
    line-height: 0;  /* don't disrupt nearby text line-height */
}

body.article .endnotes a.footnote-backref:focus { outline-color: $black; }

